add "no image" album cover; add yt and touhoudb search buttons to web; different approach to cachhin album art; update document.title finally

--- a/radio-webapp/src/App.css
+++ b/radio-webapp/src/App.css
@@ -26,6 +26,7 @@
 	width: 100%;
 	height: 100%;
 	object-fit: contain;
+	border-radius: 5px;
 }
 
 #mediainfo > #info {
@@ -130,4 +131,16 @@
 	#mediainfo > #image > img {
 		max-height: 60vh;
 	}
+}
+
+#media-links {
+	display: flex;
+	flex-direction: row;
+	padding-top: 4px;
+	gap: 4px;
+}
+
+#media-links img {
+	width: 32px;
+	height: 32px;
 }
